5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1715_3031.log
== TEST (2019-05-02 16:26:56) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3):
	  print(var**2)
elif(var>3):
	  print(var**3)
-- ERROR:
File "XXXX", line 8
    elif((var>2) and (var<=3):
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:27:07) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	  print(var**2)
elif(var>3):
	  print(var**3)
-- OUTPUT:
46.656000000000006
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:27:13) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	  print(var**2)
elif(var>3):
	  print(var**3)
-- OUTPUT:
46.656000000000006
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:27:15) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	  print(var**2)
elif(var>3):
	  print(var**3)
-- OUTPUT:
46.656000000000006
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:27:20) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	  print(var**2)
elif(var>3):
	  print(var**3)
-- OUTPUT:
46.656000000000006
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:27:24) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	  print(var**2)
elif(var>3):
	  print(var**3)
-- EXECUTION TIME:
0.209906
-- TEST CASE 1:
---- input:
3.6
---- correct output:
46.66
---- user output:
46.656000000000006
-- TEST CASE 2:
---- input:
2.9
---- correct output:
8.41
---- user output:
8.41
-- TEST CASE 3:
---- input:
1.2
---- correct output:
2
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:27:35) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	  print(var**2)
elif(var>3):
	  print(var**3)
-- OUTPUT:
46.656000000000006
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:27:45) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	  print(var**2)
elif(var>3):
	  print(var**3)
-- OUTPUT:
46.656000000000006
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:27:48) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	  print(var**2)
elif(var>3):
	  print(var**3)
-- EXECUTION TIME:
0.16226
-- TEST CASE 1:
---- input:
3.6
---- correct output:
46.66
---- user output:
46.656000000000006
-- TEST CASE 2:
---- input:
2.9
---- correct output:
8.41
---- user output:
8.41
-- TEST CASE 3:
---- input:
1.2
---- correct output:
2
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:27:57) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	  print(var**2)
elif(var>3):
	  print(var**3)
-- OUTPUT:
46.656000000000006
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:28:01) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	  print(var**2)
elif(var>3):
	  print(var**3)
-- OUTPUT:
46.656000000000006
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:28:53) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
if(var<=1):
	print(round(z,2))
elif((var>1) and (var<=2)):
	print(round(x,2))
elif((var>2) and (var<=3)):
	  print(round(var**2),2)
elif(var>3):
	  print(round(var**3),2)
-- OUTPUT:
47 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:29:23) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
if(var<=1):
	print(round(z,2))
elif((var>1) and (var<=2)):
	print((round(x,2))
elif((var>2) and (var<=3)):
	  print((round(var**2),2))
elif(var>3):
	  print((round(var**3),2))
-- ERROR:
File "XXXX", line 8
    elif((var>2) and (var<=3)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:29:30) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
if(var<=1):
	print(round(z,2))
elif((var>1) and (var<=2)):
	print((round(x,2))
elif((var>2) and (var<=3)):
	  print((round(var**2),2))
elif(var>3):
	  print(round(var**3),2))
-- ERROR:
File "XXXX", line 8
    elif((var>2) and (var<=3)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:29:33) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
if(var<=1):
	print(round(z,2))
elif((var>1) and (var<=2)):
	print((round(x,2))
elif((var>2) and (var<=3)):
	  print(round(var**2),2))
elif(var>3):
	  print(round(var**3),2))
-- ERROR:
File "XXXX", line 8
    elif((var>2) and (var<=3)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:29:37) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
if(var<=1):
	print(round(z,2))
elif((var>1) and (var<=2)):
	print(round(x,2))
elif((var>2) and (var<=3)):
	  print(round(var**2),2))
elif(var>3):
	  print(round(var**3),2))
-- ERROR:
File "XXXX", line 9
    print(round(var**2),2))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:29:59) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
if(var<=1):
	print(round(z,2))
elif((var>1) and (var<=2)):
	print(round(x,2))
elif((var>2) and (var<=3)):
	print(round(var**2),2))
elif(var>3):
	 print(round(var**3),2))
-- ERROR:
File "XXXX", line 9
    print(round(var**2),2))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:30:07) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
if(var<=1):
	print(round(z,2))
elif((var>1) and (var<=2)):
	print(round(x,2))
elif((var>2) and (var<=3)):
	print(round(var**2),2)
elif(var>3):
	 print(round(var**3),2)
-- OUTPUT:
47 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:30:45) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	print(var**2)
elif(var>3):
	 print(var**3)
-- OUTPUT:
46.656000000000006
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:31:02) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	print(round(var**2),2)
elif(var>3):
	 print(var**3)
-- OUTPUT:
46.656000000000006
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:31:35) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
c=(var**2)
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	print(round(c,2)
elif(var>3):
	 print(var**3)
-- ERROR:
File "XXXX", line 11
    elif(var>3):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:31:42) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
c=(var**2)
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	print(round(c, 2)
elif(var>3):
	 print(var**3)
-- ERROR:
File "XXXX", line 11
    elif(var>3):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:32:03) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
c=(var**2)
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	print(round(c, 2)
elif(var>3):
	 print(var**3)
-- ERROR:
File "XXXX", line 11
    elif(var>3):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:32:20) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
c=(var**2)
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	print(round(c, 2)
elif(var>3):
	 print(var**3)
-- ERROR:
File "XXXX", line 11
    elif(var>3):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:32:28) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
c=(var**2)
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	print(round(c, 2)
elif(var>3):
	print(var**3)
-- ERROR:
File "XXXX", line 11
    elif(var>3):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:32:54) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
c=(var**2)
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	print(round(c, 2)
elif(var>3):
	print(var**3)
-- ERROR:
File "XXXX", line 11
    elif(var>3):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:33:05) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
c=(var**2)
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	print(round(c, 2)

-- ERROR:
File "XXXX", line 11
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:33:10) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
c=(var**2)
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	print(round(c, 2)
-- ERROR:
File "XXXX", line 11
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:33:21) 
-- CODE:
var=float(input("valor:"))
z=1
x=2

if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	print(round(c, 2)
-- ERROR:
File "XXXX", line 11
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:33:27) 
-- CODE:
var=float(input("valor:"))
z=1
x=2

if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	print(round(c, 2)
-- ERROR:
File "XXXX", line 11
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:33:39) 
-- CODE:
var=float(input("valor:"))
z=1
x=2

if(var<=1):
	print(z)

-- ERROR:
File "XXXX", line 11
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:34:14) 
-- CODE:
var=float(input("valor:"))
z=1
x=2

if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
-- ERROR:
File "XXXX", line 11
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:34:19) 
-- CODE:
var=float(input("valor:"))
z=1
x=2

if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
-- ERROR:
File "XXXX", line 11
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:34:22) 
-- CODE:
var=float(input("valor:"))
z=1
x=2

if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
-- ERROR:
File "XXXX", line 11
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:34:29) 
-- CODE:
var=float(input("valor:"))
z=1
x=2

if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
-- ERROR:
File "XXXX", line 11
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:35:26) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
c=(var**2)
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<-=3)):
	print(c)
-- ERROR:
File "XXXX", line 9
    elif((var>2) and (var<-=3)):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:35:29) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
c=(var**2)
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	print(c)
-- ERROR:
File "XXXX", line 9
    elif((var>2) and (var<-=3)):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:35:36) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
c=(var**2)
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	print(c)
-- ERROR:
File "XXXX", line 9
    elif((var>2) and (var<-=3)):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:35:51) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
c=(var**2)
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	print(round(c, 2))
-- ERROR:
File "XXXX", line 9
    elif((var>2) and (var<-=3)):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:36:00) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
c=(var**2)
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	print(round(c, 2))
-- ERROR:
File "XXXX", line 9
    elif((var>2) and (var<-=3)):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:36:03) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
c=(var**2)
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	print(round(c, 2))
-- ERROR:
File "XXXX", line 9
    elif((var>2) and (var<-=3)):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:36:32) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
c=(var**2)
d=(var**3)
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	print(round(c, 2))
elif(var>3):
	print(d)
-- OUTPUT:
46.656000000000006
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:36:37) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
c=(var**2)
d=(var**3)
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	print(round(c, 2))
elif(var>3):
	print(d)
-- OUTPUT:
46.656000000000006
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:36:38) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
c=(var**2)
d=(var**3)
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	print(round(c, 2))
elif(var>3):
	print(d)
-- OUTPUT:
46.656000000000006
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:36:42) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
c=(var**2)
d=(var**3)
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	print(round(c, 2))
elif(var>3):
	print(d)
-- OUTPUT:
46.656000000000006
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:36:46) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
c=(var**2)
d=(var**3)
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	print(round(c, 2))
elif(var>3):
	print(d)
-- OUTPUT:
46.656000000000006
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:36:47) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
c=(var**2)
d=(var**3)
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	print(round(c, 2))
elif(var>3):
	print(d)
-- OUTPUT:
46.656000000000006
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:36:53) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
c=(var**2)
d=(var**3)
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	print(round(c, 2))
elif(var>3):
	print(d)
-- OUTPUT:
46.656000000000006
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:36:57) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
c=(var**2)
d=(var**3)
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	print(round(c, 2))
elif(var>3):
	print(d)
-- EXECUTION TIME:
0.181345
-- TEST CASE 1:
---- input:
3.6
---- correct output:
46.66
---- user output:
46.656000000000006
-- TEST CASE 2:
---- input:
2.9
---- correct output:
8.41
---- user output:
8.41
-- TEST CASE 3:
---- input:
1.2
---- correct output:
2
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:21) 
-- CODE:
var=input("valor:"))
z=1
x=2
c=(var**2)
d=(var**3)
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	print(round(c, 2))
elif(var>3):
	print(d)
-- ERROR:
File "XXXX", line 1
    var=input())
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:26) 
-- CODE:
var=input("valor:")
z=1
x=2
c=(var**2)
d=(var**3)
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	print(round(c, 2))
elif(var>3):
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c=(var**2)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:40) 
-- CODE:
var=int(input("valor:"))
z=1
x=2
c=(var**2)
d=(var**3)
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	print(round(c, 2))
elif(var>3):
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var=int(input())
ValueError: invalid literal for int() with base 10: '3.6'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:37:44) 
-- CODE:
var=int(input("valor:"))
z=1
x=2
c=(var**2)
d=(var**3)
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	print(round(c, 2))
elif(var>3):
	print(d)
-- EXECUTION TIME:
0.134236
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1715/3031/main.py", line 1, in <module>
    var=int(input())
ValueError: invalid literal for int() with base 10: '3.6'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:52) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
c=(var**2)
d=(var**3)
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	print(round(c, 2))
elif(var>3):
	print(d)
-- OUTPUT:
46.656000000000006
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:38:10) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
c=(var**2)
d=(var**3)
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	print(round(c, 2))
elif(var>3):
	print(d)
-- OUTPUT:
46.656000000000006
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:38:17) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
c=(var**2)
d=(var**3)
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	print(round(c, 2))
elif(var>3):
	print(d)
-- OUTPUT:
46.656000000000006
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:38:21) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
c=(var**2)
d=(var**3)
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	print(round(c, 2))
elif(var>3):
	print(d)
-- EXECUTION TIME:
0.151035
-- TEST CASE 1:
---- input:
3.6
---- correct output:
46.66
---- user output:
46.656000000000006
-- TEST CASE 2:
---- input:
2.9
---- correct output:
8.41
---- user output:
8.41
-- TEST CASE 3:
---- input:
1.2
---- correct output:
2
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:38:23) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
c=(var**2)
d=(var**3)
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	print(round(c, 2))
elif(var>3):
	print(d)
-- OUTPUT:
46.656000000000006
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:38:30) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
c=(var**2)
d=(var**3)
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	print(round(c, 2))
elif(var>3):
	print(d)
-- EXECUTION TIME:
0.200863
-- TEST CASE 1:
---- input:
3.6
---- correct output:
46.66
---- user output:
46.656000000000006
-- TEST CASE 2:
---- input:
2.9
---- correct output:
8.41
---- user output:
8.41
-- TEST CASE 3:
---- input:
1.2
---- correct output:
2
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:39:34) 
-- CODE:
var=int(input("valor:"))
z=1
x=2
c=(var**2)
d=(var**3)
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	print(round(c, 2))
elif(var>3):
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var=int(input())
ValueError: invalid literal for int() with base 10: '3.6'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:39:50) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
c=(var**2)
d=(var**3)
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	print(round(c, 2))
elif(var>3):
	print(d)
-- OUTPUT:
46.656000000000006
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:39:56) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
c=(var**2)
d=(var**3)
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	print(round(c, 2))
elif(var>3):
	print(d)
-- EXECUTION TIME:
0.145423
-- TEST CASE 1:
---- input:
3.6
---- correct output:
46.66
---- user output:
46.656000000000006
-- TEST CASE 2:
---- input:
2.9
---- correct output:
8.41
---- user output:
8.41
-- TEST CASE 3:
---- input:
1.2
---- correct output:
2
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:40:02) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
c=(var**2)
d=(var**3)
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	print(round(c, 2))
elif(var>3):
	print(d)
-- OUTPUT:
46.656000000000006
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:40:09) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
c=(var**2)
d=(var**3)
if(var<=1):
	print(z)
elif((var>1) and (var<=2)):
	print(x)
elif((var>2) and (var<=3)):
	print(round(c, 2))
elif(var>3):
	print(d)
-- OUTPUT:
46.656000000000006
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:40:45) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
c=(var**2)
d=(var**3)
if(var<=1):
	print(round(z, 2))
elif((var>1) and (var<=2)):
	print(round(x,2))
elif((var>2) and (var<=3)):
	print(round(c, 2))
elif(var>3):
	print(round(d, 2))
-- OUTPUT:
46.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:40:52) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
c=(var**2)
d=(var**3)
if(var<=1):
	print(round(z, 2))
elif((var>1) and (var<=2)):
	print(round(x,2))
elif((var>2) and (var<=3)):
	print(round(c, 2))
elif(var>3):
	print(round(d, 2))
-- OUTPUT:
46.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:40:54) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
c=(var**2)
d=(var**3)
if(var<=1):
	print(round(z, 2))
elif((var>1) and (var<=2)):
	print(round(x,2))
elif((var>2) and (var<=3)):
	print(round(c, 2))
elif(var>3):
	print(round(d, 2))
-- OUTPUT:
46.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:40:58) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
c=(var**2)
d=(var**3)
if(var<=1):
	print(round(z, 2))
elif((var>1) and (var<=2)):
	print(round(x,2))
elif((var>2) and (var<=3)):
	print(round(c, 2))
elif(var>3):
	print(round(d, 2))
-- OUTPUT:
46.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:41:01) 
-- CODE:
var=float(input("valor:"))
z=1
x=2
c=(var**2)
d=(var**3)
if(var<=1):
	print(round(z, 2))
elif((var>1) and (var<=2)):
	print(round(x,2))
elif((var>2) and (var<=3)):
	print(round(c, 2))
elif(var>3):
	print(round(d, 2))
-- EXECUTION TIME:
0.144688
-- TEST CASE 1:
---- input:
3.6
---- correct output:
46.66
---- user output:
46.66
-- TEST CASE 2:
---- input:
2.9
---- correct output:
8.41
---- user output:
8.41
-- TEST CASE 3:
---- input:
1.2
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
